<resources>
    <string name="app_name">MyLibrary</string>
    <string name="edit_home_search_hint">검색어를 입력하세요</string>
    <string name="text_dlg_create_category_title">추가할 폴더의 이름을\n입력해주세요.</string>
    <string name="text_user_add">추가</string>
    <string name="text_edit_category_nocontent_subhead">버튼을 눌러 폴더를 추가해주세요 :)</string>
    <string name="text_edit_category_nocontent_head">아직 폴더가 없어요</string>
    <string name="btn_edit_category_nocontent">추가</string>
    <string name="text_dlg_delete_category_title">폴더를\n삭제하시겠습니까?</string>
    <string name="text_search_nosearch_head">검색 결과가 없어요</string>
    <string name="text_search_nosearch_subhead">다시 한번 검색해주세요 :)</string>
    <string name="text_dlg_delete_cancel">취소</string>
    <string name="text_dlg_delete_confirm">확인</string>
    <string name="text_login_email_title">이메일로 로그인</string>
    <string name="text_login_email_label_email">이메일</string>
    <string name="edit_login_email_email">abcd1234@gmail.com</string>
    <string name="text_login_email_label_pwd">비밀번호</string>
    <string name="edit_login_email_pwd">6자리 이상</string>
    <string name="text_login_email_find"><u>아직 계정이 없으신가요?</u></string>
    <string name="btn_login_email_confirm">로그인</string>
    <string name="text_login_title">My Library</string>
    <string name="text_login_email_btn">이메일로 로그인</string>
    <string name="text_login_label_signup">아직 계정이 없으신가요?</string>
    <string name="text_login_signup"><u>여기에서 계정을 만드세요!</u></string>
    <string name="text_signup_email_title">이메일로 회원가입</string>
    <string name="text_signup_email_label">이메일 입력</string>
    <string name="edit_signup_email_input">abcd1234@gmail.com</string>
    <string name="btn_signup_emali_confirm">계속</string>
    <string name="text_signup_pwd_title">이메일로 회원가입</string>
    <string name="text_signup_pwd_label">비밀번호 입력</string>
    <string name="edit_signup_pwd_input">6자리 이상 입력</string>
    <string name="text_signup_pwd_label_confirm">비밀번호 재입력</string>
    <string name="edit_signup_pwd_confirm_input">비밀번호 확인</string>
    <string name="btn_signup_pwd_confirm">계속</string>
    <string name="text_signup_username_title">이메일로 회원가입</string>
    <string name="text_signup_username_label">닉네임 입력</string>
    <string name="edit_signup_username_input">두 글자 이상 입력</string>
    <string name="btn_signup_username_confirm">완료</string>
    <string name="facebook_app_id">989505941705090</string>
    <string name="fb_login_protocol_scheme">fb989505941705090</string>
    <string name="text_user_label_bookmark">북마크한 책 :)</string>
    <string name="text_home_label_popular">인기 도서 TOP9 🔥</string>
    <string name="text_ihome_label_author">작가</string>
    <string name="text_ihome_label_publisher">출판사</string>
    <string name="text_ihome_label_price">가격</string>
    <string name="text_ihome_link"><u>링크</u></string>
    <string name="text_facebook_username_title">페이스북 회원가입</string>
    <string name="text_facebook_username_label">닉네임 입력</string>
    <string name="edit_facebook_username_input">두 글자 이상 입력</string>
    <string name="btn_facebook_username_confirm">완료</string>
    <string name="text_setting_title">설정</string>
    <string name="text_setting_label_username">닉네임 변경</string>
    <string name="text_setting_label_account">연결된 계정</string>
    <string name="text_setting_label_logout">로그아웃</string>
    <string name="text_setting_label_servicewithdrawal">서비스 탈퇴</string>
    <string name="text_setting_username_title">닉네임 변경</string>
    <string name="text_setting_username_label">닉네임 입력</string>
    <string name="edit_setting_username">두 글자 이상 입력</string>
    <string name="btn_setting_username_confirm">완료</string>
    <string name="text_dlg_book_detail_review"><u>후기</u></string>
    <string name="text_edit_category_title">카테고리 설정</string>
    <string name="text_dlg_rating_confirm">확인</string>
    <string name="text_dlg_rating_cancel">취소</string>
    <string name="text_dlg_book_detail_label_rating">평점</string>
    <string name="text_bottomsheet_review_title">후기</string>
    <string name="edit_bottomsheet_review_input">후기를 남겨주세요</string>
    <string name="text_dlg_book_rating_title">별점을 남겨\n이 책을 평가해주세요:)</string>
    <string name="popupmenu_more">삭제</string>
</resources>