<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_dlg_delete_category_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_dlg_delete_category_title"
        style="@style/BottomSheetHead"
        android:text="@string/text_dlg_delete_category_title"
        android:paddingTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_dlg_delete_cancel"
        style="@style/BottomSheetButton"
        android:text="@string/text_dlg_delete_cancel"
        app:layout_constraintEnd_toStartOf="@id/text_dlg_delete_confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_dlg_delete_category_title" />

    <TextView
        android:id="@+id/text_dlg_delete_confirm"
        style="@style/BottomSheetButton"
        android:text="@string/text_dlg_delete_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_dlg_delete_cancel"
        app:layout_constraintTop_toTopOf="@id/text_dlg_delete_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>
