<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_login_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_login_email_back"
        style="@style/BackArrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_login_email_title"
        style="@style/HeadBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/text_login_email_title"
        app:layout_constraintStart_toStartOf="@+id/guideline_login_email_start_56dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_login_email_label_email"
        style="@style/SubHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/text_login_email_label_email"
        app:layout_constraintStart_toStartOf="@+id/guideline_login_email_start_56dp"
        app:layout_constraintTop_toBottomOf="@+id/text_login_email_title" />


    <EditText
        android:id="@+id/edit_login_email_email"
        style="@style/SubHead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/edit_login_email_email"
        android:inputType="textEmailAddress"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_login_email_end_56dp"
        app:layout_constraintStart_toStartOf="@+id/text_login_email_label_email"
        app:layout_constraintTop_toBottomOf="@+id/text_login_email_label_email"/>


    <TextView
        android:id="@+id/text_login_email_label_pwd"
        style="@style/SubHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_login_email_label_pwd"
        app:layout_constraintStart_toStartOf="@+id/guideline_login_email_start_56dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_login_email_email" />


    <EditText
        android:id="@+id/edit_login_email_pwd"
        style="@style/SubHead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/edit_login_email_pwd"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/guideline_login_email_end_56dp"
        app:layout_constraintStart_toStartOf="@+id/text_login_email_label_email"
        app:layout_constraintTop_toBottomOf="@+id/text_login_email_label_pwd" />

    <Button
        android:id="@+id/btn_login_email_confirm"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/btn_login_email_confirm"
        android:layout_marginTop="200dp"
        app:backgroundTint="@color/selected"
        app:layout_constraintEnd_toStartOf="@+id/guideline_login_email_end_56dp"
        app:layout_constraintStart_toStartOf="@+id/guideline_login_email_start_56dp"
        app:layout_constraintTop_toBottomOf="@id/edit_login_email_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1.0"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_login_email_start_56dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="56dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_login_email_end_56dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="56dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
