<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/constraint_edit_category_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_edit_category"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/ctoolbar_edit_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_edit_category"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="parallax" />

            <ImageView
                android:id="@+id/image_edit_category_back"
                style="@style/BackArrow" />

            <TextView
                android:id="@+id/text_edit_category_title"
                style="@style/AppbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="48dp"
                android:text="@string/text_edit_category_title" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_edit_category_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toStartOf="@id/text_edit_category_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar_edit_category"
        tools:listitem="@layout/item_user_category" />

    <TextView
        android:id="@+id/text_edit_category_add"
        style="@style/AddText"
        android:text="@string/text_user_add"
        app:layout_constraintBottom_toBottomOf="@id/recycler_edit_category_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/recycler_edit_category_category"
        app:layout_constraintTop_toTopOf="@id/recycler_edit_category_category" />

    <View
        android:id="@+id/view_edit_category_overlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/overlay_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_edit_category_category"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/text_edit_category_nocontent_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_edit_category_nocontent_subhead"
        android:text="@string/text_edit_category_nocontent_head"/>

    <TextView
        android:id="@+id/text_edit_category_nocontent_subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:paddingVertical="16dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_edit_category_nocontent"
        android:text="@string/text_edit_category_nocontent_subhead"/>

    <Button
        android:id="@+id/btn_edit_category_nocontent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_edit_category_nocontent"
        android:textColor="@color/black"
        android:visibility="invisible"
        style="@style/RippleEffect"
        app:backgroundTint="@color/secondaryColor"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>