<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.example.mylibrary.view.setting.SettingUsernameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_setting_username_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_setting_username"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:fitsSystemWindows="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/ctoolbar_setting_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|enterAlways">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar_setting_username"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    app:contentInsetStart="0dp"
                    app:layout_collapseMode="parallax" />

                <ImageView
                    android:id="@+id/image_setting_username_back"
                    style="@style/BackArrow" />

                <TextView
                    android:id="@+id/text_setting_username_title"
                    style="@style/AppbarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="48dp"
                    android:text="@string/text_setting_username_title" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/motion_setting_username_innercontainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="48dp"
            android:paddingHorizontal="56dp"
            app:layoutDescription="@xml/setting_username_scene">

            <TextView
                android:id="@+id/text_setting_username_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/text_setting_username_label"
                android:textAppearance="@style/SubHeadBold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_setting_username"
                style="@style/SubHead"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/edit_setting_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_setting_username_label"
                bind:usernameValidation="@={vm.username}"/>

            <Button
                android:id="@+id/btn_setting_username_confirm"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:text="@string/btn_setting_username_confirm"
                app:backgroundTint="@color/secondaryColor" />

        </androidx.constraintlayout.motion.widget.MotionLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>